# ChangeLog for app-text/lcdf-typetools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.28 2008/11/08 13:14:41 nixnut Exp $

  08 Nov 2008; nixnut <nixnut@gentoo.org> lcdf-typetools-2.69.ebuild:
  Stable on ppc wrt bug 234257

  26 Aug 2008; Jeroen Roovers <jer@gentoo.org> lcdf-typetools-2.69.ebuild:
  Stable for HPPA (bug #234257).

*lcdf-typetools-2.71 (17 Aug 2008)

  17 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.71.ebuild:
  version bump

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> lcdf-typetools-2.69.ebuild:
  alpha/ia64/x86 stable wrt #234257

  09 Aug 2008; Santiago M. Mola <coldwind@gentoo.org>
  lcdf-typetools-2.69.ebuild:
  amd64 stable wrt bug #234257

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> lcdf-typetools-2.69.ebuild:
  Stable on ppc64; bug #234257

  08 Aug 2008; Ferris McCormick <fmccor@gentoo.org>
  lcdf-typetools-2.69.ebuild:
  Sparc stable, Bug #234257.

  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*lcdf-typetools-2.69 (30 May 2008)

  30 May 2008; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.69.ebuild:
  version bump

  12 May 2008; nixnut <nixnut@gentoo.org> lcdf-typetools-2.66.ebuild:
  Stable on ppc wrt bug 220651

  06 Apr 2008; Markus Rothe <corsair@gentoo.org> lcdf-typetools-2.66.ebuild:
  Added ~ppc; bug #195815

  06 Apr 2008; Markus Rothe <corsair@gentoo.org> lcdf-typetools-2.66.ebuild:
  Stable on ppc64; bug #215735

  02 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  lcdf-typetools-2.66.ebuild:
  amd64 stable wrt bug #208750

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org>
  lcdf-typetools-2.66.ebuild:
  keyword ~x86-fbsd

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> lcdf-typetools-2.66.ebuild:
  alpha/ia64 stable wrt #208750

  05 Feb 2008; Ferris McCormick <fmccor@gentoo.org>
  lcdf-typetools-2.66.ebuild: