@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST lcdf-typetools-2.66.tar.gz 502950 RMD160 723f2ccca813b5a33f28417edfa67ab239ce2e1a SHA1 7cf8d953efcbae54772a76e39b6615393f895de4 SHA256 7bfc0386c7b24719e9dc8e0c6ae5f9f780e5689200075d79ea5c85919f5e97db
 DIST lcdf-typetools-2.69.tar.gz 550738 RMD160 3c38c5061c5499a47c44e233f7fa9937b0061678 SHA1 286efb9f83eed10836dff018afea633a0ae9651e SHA256 1f4a06dc9b1c47f99488b90d2602736bd4a8bef4d17ef3fe3202750133bd4c5a
 DIST lcdf-typetools-2.71.tar.gz 560922 RMD160 b6519c862c4f1a346299854d3337e6931e862ffd SHA1 38132265ad3db303be723f385f4601589845b536 SHA256 d286e17ca90a6dcc98e151a5ef492598995bb2191ced50cf0e5687b3f998434c
+DIST lcdf-typetools-2.72.tar.gz 530589 RMD160 e62059c509238d22d1429aefe5310b6a46d3dbe6 SHA1 092f2f09a0f5f2e0ed52e5a2d0146591e0f0e757 SHA256 82e60560a43af74bc7e23b0c68f38db89b1a3b53d9e6089d54f27d8f462031fe
 EBUILD lcdf-typetools-2.66.ebuild 728 RMD160 1ca5050796890ca5d1ff032b14d510ad6f8291d0 SHA1 0051b7634f643de3da9ff2dec92765ff5a457538 SHA256 1366de217246540e0c43813e3ef6c3acd9e402b815c699d6509070a9910fb222
 EBUILD lcdf-typetools-2.69.ebuild 727 RMD160 c2bceb374798d631914aca79a771f476240a51f0 SHA1 d74b29258fbd2cb50fa5ca48fc6256f8b7ff7ce9 SHA256 218cfbb6f8c73d3eb21fe0fab98cbb52ae521147fb9cfa50d01bf5207d72818c
 EBUILD lcdf-typetools-2.71.ebuild 737 RMD160 eb98e2fbb56ee37bfb8453ea589e225a3ee30e5c SHA1 7c0cc04ea928cb9e810df3f7dc19d76f27b48d9d SHA256 3018cda5dcbc84557cc3a7ed72ccaa5fd9625e434ca495869545ebadecbcb0d2
-MISC ChangeLog 3558 RMD160 a788345486c2fcaefe14096756abb21fdc966580 SHA1 fa293771e1fab99e9c7fb2668c3ed7cfe4b6e8ec SHA256 7b788a306757583255b7a84dd64b319d7ca0af02550178292ef1041ecda2a18a
+EBUILD lcdf-typetools-2.72.ebuild 737 RMD160 ad6a0eebbd36033fee38b976a0d269e2f3994f88 SHA1 ea2120161e5523d99282acb7a10b39921b74c059 SHA256 b03d4ef5e38f2162ed10c381f35706ee3b44fca2b796d81ec4dbebdad338e64d
+MISC ChangeLog 3695 RMD160 4dc292200a3443e4a852bf81937cc327b83c2528 SHA1 4dee49e1d31c147efb90dac59ae0f477207438cc SHA256 bca21084a601a46a6ea98069bdea948515bcc4e35bb405c3783c29518ea46803
 MISC metadata.xml 702 RMD160 c904cf0f3ce661f9f00bac7e885f2db576a3fc90 SHA1 5269323d45882b55eea6069a737e3de0e33594c7 SHA256 c6d28057fc8880766a2b0e634e57d0b22e73d37b283309637b41da4e226d3c2e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklQ8vYACgkQvFcC4BYPU0r1sgCcC+9aK0TZKPPFiWitunQa6oOy
+3O8An09P6xfzz0AOQtOPDTmVLE9CvLin
+=cecp
+-----END PGP SIGNATURE-----
