@@ -1,6 +1,12 @@
 # ChangeLog for app-text/lcdf-typetools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.28 2008/11/08 13:14:41 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.29 2008/12/23 14:17:20 aballier Exp $
+
+*lcdf-typetools-2.72 (23 Dec 2008)
+
+  23 Dec 2008; Alexis Ballier <aballier@gentoo.org>
+  +lcdf-typetools-2.72.ebuild:
+  version bump
 
   08 Nov 2008; nixnut <nixnut@gentoo.org> lcdf-typetools-2.69.ebuild:
   Stable on ppc wrt bug 234257
